# suffixtree

./: CMakeLists.txt
