project(suffixTrees)
cmake_minimum_required(VERSION 2.8)

set(SRC_LIST
    ${CMAKE_CURRENT_SOURCE_DIR}/suffixTree.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/edge.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/node.cpp
)

set(HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/suffixTree.h
    ${CMAKE_CURRENT_SOURCE_DIR}/edge.h
    ${CMAKE_CURRENT_SOURCE_DIR}/node.h
)

#SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
#SET(BUILD_SHARED_LIBRARIES OFF)
#SET(CMAKE_EXE_LINKER_FLAGS "-static")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -g")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wall")

add_executable(${PROJECT_NAME} ${SRC_LIST})

install (TARGETS ${PROJECT_NAME} DESTINATION bin)
